Fix for android logo, shifted iphone

--- a/assets/chatbooks.css
+++ b/assets/chatbooks.css
@@ -642,14 +642,14 @@ header .screenshot{
 	position: absolute;
 	left: 72.916666667%;
 	bottom: 0;
-	margin: 0 0 -50px -160px;
+	margin: 0 0 -50px -100px;
 }
 
 @media (max-width: 1120px){
 	header .screenshot{
 		width: 202.5px;
 		height: 426.75px;
-		margin: 0 0 -30px -121px;
+		margin: 0 0 -30px -71px;
 	}
 
 
@@ -805,7 +805,7 @@ header .screenshot{
 	margin: 35px auto;
 	width: 50px;
 	height: 60px;
-	background: url(img/sprite.png) -100px -100px no-repeat;
+	background: url(img/sprite.png) -135px -100px no-repeat;
 	background-image: none, url(img/sprite.svg);
 }
 
